---------------
Release: 0.7.13
---------------
Date: 31st Dec 2014

^^^^^^^^^^^^^^^^^^^^
Changes since 0.7.12
^^^^^^^^^^^^^^^^^^^^




---------------
Release: 0.7.12
---------------
Date: 6th Jul 2014

^^^^^^^^^^^^^^^^^^^^
Changes since 0.7.11
^^^^^^^^^^^^^^^^^^^^

* Added method IPSet.iter_ipranges().

* bool(IPSet()) works now for large IPSets, e.g. IPSet(['2405:8100::/32']).

* IPNetwork.iter_hosts now skips the subnet-router anycast address for IPv6.

* Removed function fbsocket.inet_aton because it is unused and unnecessary

^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Specific bug fixes addressed in this release
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

FIXED Issue 69: https://github.com/drkjam/netaddr/issues/69
    - Add __nonzero__ method to IPSet

FIXED Pull Request 68: https://github.com/drkjam/netaddr/pull/68
    - Fixed a bug related to allowing ::0 during iter_hosts for v6

FIXED Issue 67: https://github.com/drkjam/netaddr/issues/67
    - Remove function fbsocket.inet_aton

FIXED Pull Request 66: https://github.com/drkjam/netaddr/pull/66
    - Added Function to create list of IPRange for non-contiguous IPSet

---------------
Release: 0.7.11
---------------
Date: 19th Mar 2014

^^^^^^^^^^^^^^^^^^^^
Changes since 0.7.10
^^^^^^^^^^^^^^^^^^^^

* Performance of IPSet increased dramatically, implemented by
    Stefan Nordhausen and Martijn van Oosterhout. As a side effect,
    IPSet(IPNetwork("10.0.0.0/8")) is now as fast as you'd expect.

* Various performance improvements all over the place.

* netaddr is now hosted on PyPI and can be installed via pip.

* Doing  "10.0.0.42" in IPNetwork("10.0.0.0/24")  works now.

* IPSet has two new methods: iscontiguous() and iprange(), thanks to Louis des Landes.

* Re-added the IPAddress.netmask_bits() method that was accidently removed.

* Networks 128.0.0.0/16, 191.255.0.0/16, and 223.255.255.0/24 are not marked as
    reserved IPv4 addresses any more. Thanks to marnickv for pointing that out.
